--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>About A CITY GIRL</h2>
-              <p>A CITY GIRL is an online food and fashion blog by Kelly Leung. She is a Bostonian who wants to share her adventure around the city by discovering new fantastic trendy places to eat. Boston has so many hidden resturants that she hasn't gotten around to! She's so excited to let you join her exploration!</p>
+              <p>A CITY GIRL is an online food and fashion blog by Kelly Leung. She is a Bostonian who wants to share her adventure around the city by discovering new fantastic trendy places to eat. Boston has so many hidden resturants that she hasn't tried yet! She's so excited to let you join her journey!</p>
           </div>
         </div>
       </div>
@@ -84,7 +84,7 @@
       <div class="container">
         <div class="col-lg-8 mx-auto">
           <h2>Posts</h2>
-          <p>Unfortunately my posts are still under the works. Please check out my favorite Boston based bloggers in the meantime!</p>    
+          <p>My posts are under construction. In the meantime, please check out my favorite Boston based bloggers!</p>    
           <a href="http://extrapetite.com" class="btn btn-default btn-lg">Visit Extra Petite Blog</a>
         </div>
       </div>
@@ -132,7 +132,7 @@
     <!-- Footer -->
     <footer>
       <div class="container text-center">
-        <p>Copyright &copy; Kelly Leung's Blog 2018</p>
+        <p>Copyright &copy; Kelly Leung's Blog 2017</p>
       </div>
     </footer>
 
